tests/fixtures/positive/style/UseLet.kt
package style

fun example(nullable: String?) {
    if (nullable != null) {
        nullable.length
    }
}
